Created the end points for loginand register relates to #18 created error.hbs and error.js relates to #5

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -18,11 +18,11 @@
     </div>
   </div>
   <section class="login-pet hideForm">
-    <form class="login-pet__form" action="/loginpPet" method="post">
+    <form class="login-pet__form" action="/loginPet" method="post">
       <h1 class="login-pet__form__heading"> Log in pet</h1>
       <label for="petloginemailinput" class="login-pet__form__labels">Email<input type="email" name="petEmailLogin" id="petloginemailinput" class="login-pet__form__inputs" required> </label>
       <label for="petloginpasswordinput" class="login-pet__form__labels">Password <input type="password" name="petPasswordLogin" id="petloginpasswordinput" class="login-pet__form__inputs" required> </label>
-      <label for="petloginsubmit" class="login-pet__form__inputs"><input type="submit" name="petLoginSubmit" value="Log in" id="petloginsubmit" class="login-pet__form__submit"> </label>
+      <label for="petloginsubmit" class="login-pet__form__inputs"><input type="submit" value="Log in" id="petloginsubmit" class="login-pet__form__submit"> </label>
     </form>
   </section>
   <section class="login-walker hideForm">
@@ -30,7 +30,7 @@
       <h1 class="login-walker__form__heading"> Log in walker</h1>
       <label for="walkerloginemailinput" class="login-walker__form__labels">Email<input type="email" name="walkerEmailLogin" id="walkerloginemailinput" class="login-walker__form__inputs" required> </label>
       <label for="walkerloginpasswordinput" class="login-walker__form__labels">Password <input type="password" name="walkerPasswordLogin" id="walkerloginpasswordinput" class="login-walker__form__inputs" required> </label>
-      <label for="walkerloginsubmit" class="login-walker__form__labels"><input type="submit" name="walkerloginsubmit" value="Log in" id="walkerloginsubmit" class="login-walker__form__submit"> </label>
+      <label for="walkerloginsubmit" class="login-walker__form__labels"><input type="submit"  value="Log in" id="walkerloginsubmit" class="login-walker__form__submit"> </label>
     </form>
   </section>
   <section class="register-pet hideForm">
@@ -41,7 +41,7 @@
       <label for="registerpetpictureinput" class="register-pet__form__labels"> Pet picture url <input type="text" name="registerPetPicture" id="registerpetpictureinput" class="register-pet__form__inputs" required> </label>
       <label for="petregisteremailinput" class="register-pet__form__labels">Email<input type="email" name="petEmailRegister" id="petregisteremailinput" class="register-pet__form__inputs" class="register-pet__form__inputs" required> </label>
       <label for="petregisterpasswordinput" class="register-pet__form__labels">Password <input type="password" name="passowrd" id="petregisterpasswordinput" class="register-pet__form__inputs" required> </label>
-      <label for="petregistersubmit" class="register-pet__form__labels"><input type="submit" name="petregistersubmit" value="Register" id="petregistersubmit" class="register-pet__form__submit"> </label>
+      <label for="petregistersubmit" class="register-pet__form__labels"><input type="submit"  value="Register" id="petregistersubmit" class="register-pet__form__submit"> </label>
     </form>
   </section>
   <section class="register-walker hideForm">
@@ -50,7 +50,7 @@
       <label for="registerinputname" class="register-walker__form__labels"> Name <input type="text" name="registerWalkerName" id="registerinputname" class="register-walker__form__inputs"> </label>
       <label for="walkerregisteremailinput" class="register-walker__form__labels">Email<input type="email" name="walkerEmailLogin" id="walkerregisteremailinput" class="register-walker__form__inputs" required> </label>
       <label for="walkerregisterpasswordinput">Password <input type="password" name="passowrd" id="walkerregisterpasswordinput" class="register-walker__form__inputs" required> </label>
-      <label for="walkerregistersubmit" class="register-walker__form__labels"><input type="submit" name="walkerregistersubmit" value="Register" id="walkerregistersubmit" class="register-walker__form__submit"> </label>
+      <label for="walkerregistersubmit" class="register-walker__form__labels"><input type="submit"  value="Register" id="walkerregistersubmit" class="register-walker__form__submit"> </label>
     </form>
   </section>
 </section>
