created querry for check_pet_password and check_walker_password relates to #15 relates to #14

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -40,7 +40,7 @@
       <label for="registerpetnameinput" class="register-pet__form__labels"> Pet name <input type="text" name="registerPetName" id="registerpetnameinput" class="register-pet__form__inputs" required> </label>
       <label for="registerpetpictureinput" class="register-pet__form__labels"> Pet picture url <input type="text" name="registerPetPicture" id="registerpetpictureinput" class="register-pet__form__inputs" required> </label>
       <label for="petregisteremailinput" class="register-pet__form__labels">Email<input type="email" name="petEmailRegister" id="petregisteremailinput" class="register-pet__form__inputs" class="register-pet__form__inputs" required> </label>
-      <label for="petregisterpasswordinput" class="register-pet__form__labels">Password <input type="password" name="passowrd" id="petregisterpasswordinput" class="register-pet__form__inputs" required> </label>
+      <label for="petregisterpasswordinput" class="register-pet__form__labels">Password <input type="password" name="password" id="petregisterpasswordinput" class="register-pet__form__inputs" required> </label>
       <label for="petregistersubmit" class="register-pet__form__labels"><input type="submit"  value="Register" id="petregistersubmit" class="register-pet__form__submit"> </label>
     </form>
   </section>
