register walker password hashing and set cookie relates to #29 and #33

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -48,8 +48,8 @@
     <form class="register-walker__form" action="/registerWalker" method="post">
       <h1 class="register-walker__form__heading"> Register walker </h1>
       <label for="registerinputname" class="register-walker__form__labels"> Name <input type="text" name="registerWalkerName" id="registerinputname" class="register-walker__form__inputs"> </label>
-      <label for="walkerregisteremailinput" class="register-walker__form__labels">Email<input type="email" name="walkerEmailLogin" id="walkerregisteremailinput" class="register-walker__form__inputs" required> </label>
-      <label for="walkerregisterpasswordinput">Password <input type="password" name="passowrd" id="walkerregisterpasswordinput" class="register-walker__form__inputs" required> </label>
+      <label for="walkerregisteremailinput" class="register-walker__form__labels">Email<input type="email" name="registerWalkerEmail" id="walkerregisteremailinput" class="register-walker__form__inputs" required> </label>
+      <label for="walkerregisterpasswordinput">Password <input type="password" name="registerWalkerPassword" id="walkerregisterpasswordinput" class="register-walker__form__inputs" required> </label>
       <label for="walkerregistersubmit" class="register-walker__form__labels"><input type="submit"  value="Register" id="walkerregistersubmit" class="register-walker__form__submit"> </label>
     </form>
   </section>
