fixed merge conflicts

--- a/src/views/petdisplaywalks.hbs
+++ b/src/views/petdisplaywalks.hbs
@@ -16,9 +16,10 @@
     <section class="walkerDisplay__newWalk-container">
         <form class="new-walk__form" action="/newWalk" method="post">
           <h1 class="new-walk__form__heading">Request a Walk</h1>
-          <label for="newwalkpostcodeinput" class="new-walk__form__labels">Postcode<input type="text" name="newWalkPostcode" id="newwalkpostcodeinput" class="register-pet__form__inputs" required> </label>
-          <label for="newwalkdateinput" class="new-walk__form__labels">Date<input type="date" name="newWalkDate" id="newwalkdateinput" class="new-walk__form__inputs" required> </label>
-          <label for="newwalktimeinput" class="new-walk__form__labels">Time<input type="time" name="newWalkTime" id="newwalktimeinput" class="new-pet__form__inputs" required> </label>
+          <label for="newwalkpostcodeinput" class="new-walk__form__labels">Postcode<input type="text" name="newwalkpostcode" id="newwalkpostcodeinput" class="register-pet__form__inputs" required> </label>
+          <label for="newwalkdateinput" class="new-walk__form__labels">Date<input type="date" name="newwalkdate" id="newwalkdateinput" class="new-walk__form__inputs" required> </label>
+          <label for="newwalktimeinput" class="new-walk__form__labels">Time<input type="time" name="newwalktime" id="newwalktimeinput" class="new-pet__form__inputs" required> </label>
+          <label for="newwalksubmit" class="new-walk__form__labels"><input type="submit" class="new-pet__form__input-button" value="submit"></label>
         </form>
 
   </section>
