added the logout button

--- a/src/views/displaywalks.hbs
+++ b/src/views/displaywalks.hbs
@@ -2,10 +2,9 @@
   <header class="walkerDisplay__heading">
     <h2 class="walkerDisplay__heading__title"> All walks </h2>
   </header>
-  <section>
-
-
-  </section>
+<form class=""action="/logout" method="post">
+  <label for="logoutId"><input type="submit"  value="Log out" id='logoutId'></label>
+</form>
 
   <section class="walkerDisplay__pets-container">
     {{#if allWalks}}
