--- a/src/views/petdisplaywalks.hbs
+++ b/src/views/petdisplaywalks.hbs
@@ -2,8 +2,10 @@
   <header class="walkerDisplay__heading">
     <h2 class="walkerDisplay__heading__title"> Your walks </h2>
   </header>
-  <section>
-  </section>
+  <form class=""action="/logout" method="post">
+    <label for="logoutId"><input type="submit"  value="Log out" id='logoutId'></label>
+  </form>
+
   <section class="walkerDisplay__pets-container">
       {{#each allWalks}}
         <div class="walkerDisplay__pet">
