Log out button relates to 49

--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -20,7 +20,7 @@
   <section class="login-pet hideForm">
     <form class="login-pet__form" action="/loginPet" method="post">
       <h1 class="login-pet__form__heading"> Log in pet</h1>
-      <label for="petloginemailinput" class="login-pet__form__labels">Email<input type="email" name="petEmailLogin" id="petloginemailinput" class="login-pet__form__inputs" required> </label>
+      <label for="petloginemailinput" class="login-pet__form__labels">Email<input type="text" name="petEmailLogin" id="petloginemailinput" class="login-pet__form__inputs" required> </label>
       <label for="petloginpasswordinput" class="login-pet__form__labels">Password <input type="password" name="petPasswordLogin" id="petloginpasswordinput" class="login-pet__form__inputs" required> </label>
       <label for="petloginsubmit" class="login-pet__form__inputs"><input type="submit" value="Log in" id="petloginsubmit" class="login-pet__form__submit"> </label>
     </form>
