--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -4,5 +4,6 @@
   <meta name="description">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
   <link rel="stylesheet" href="main.css">
 </head>
