--- a/src/views/petdisplaywalks.hbs
+++ b/src/views/petdisplaywalks.hbs
@@ -1,6 +1,7 @@
 <section class="walkerDisplay">
   <header class="walkerDisplay__heading">
-    <h2 class="walkerDisplay__heading__title"> Your walks </h2>
+    <h2 class="walkerDisplay__heading__title"> Hello {{petName}}! </h2>
+    <h2 class="walkerDisplay__heading__title"> Here are your walks </h2>
   </header>
   <form class=""action="/logout" method="post">
     <label for="logoutId"><input type="submit"  value="Log out" id='logoutId'></label>
