--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8">
-  <title>Login Page</title>
+  <title>Walk With Me </title>
   <meta name="description">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
