--- a/src/views/displaywalks.hbs
+++ b/src/views/displaywalks.hbs
@@ -4,7 +4,7 @@
     <h2 class="walkerDisplay__heading__title"> Here are all available walks </h2>
   </header>
 <form class=""action="/logout" method="post">
-  <label for="logoutId"><input type="submit"  value="Log out" id='logoutId'></label>
+  <label for="logoutId"><input type="submit"  value="Log out" id='logoutId' class="logoutBtn"></label>
 </form>
 
   <section class="walkerDisplay__pets-container">
