--- a/public/main.css
+++ b/public/main.css
@@ -46,7 +46,7 @@ body {
   text-align: center;
 }
 
-.home__buttons-pet__login-btn , .home__buttons-pet__register-btn , .home__buttons-walker__login-btn , .home__buttons-walker__register-btn {
+.home__buttons-pet__login-btn , .home__buttons-pet__register-btn , .home__buttons-walker__login-btn , .home__buttons-walker__register-btn  {
   border-radius: 50%;
   height: 4rem;
   width: 4rem;
@@ -74,4 +74,40 @@ padding: 0rem 1rem;
 }
 input{
   padding-left:0.25rem;
-}*/
+}
+.walkerDisplay__pets-container{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+flex-wrap: wrap;
+justify-content: space-around;
+
+}
+.walkerDisplay__pet{
+  text-align: center;
+  border: 4px solid #ffc500;
+  height: 500px;
+  margin-top: 1rem;
+}
+.walkerDisplay__pet__img{
+  width: 15rem;
+  height: 50%;
+}
+.walkerDisplay__pet__form__submit, .logoutBtn{
+  background: #F0884B;
+color: navy;
+padding: 0.5rem;
+margin-bottom: 0.2rem;
+font-size: 1rem;
+
+}
+.walkDisplay__pets-container{
+  display: flex;
+width: 80%;
+justify-content: space-around
+}
+.walkDisplay__pet{
+  width: 15rem;
+  text-align: center;
+  border: 4px solid #ffc500;
+}
